fix some layout issues

--- a/extension/src/panel/app-routes/edit-route/style.module.css
+++ b/extension/src/panel/app-routes/edit-route/style.module.css
@@ -1,19 +1,3 @@
-.editContainer {
-  position: relative;
-}
-h2 {
-  font-size: 1.5em;
-  margin: 0em;
-}
-
-.backLink {
-  position: absolute;
-  top: -25px;
-  left: 0;
-  font-size: 0.8em;
-  text-decoration: none;
-}
-
 .form {
   flex-grow: 1;
 }
